Added branch diagram

--- a/basic-web-page.html
+++ b/basic-web-page.html
@@ -13,7 +13,8 @@
                 <h3><b>What is a Commit?</b></h3>
                 <p>Using Git, a change can be permanently saved to the repository (project) as a commit. Commits capture the state of the project at that time, like a series of snapshots along the timeline of the project.</p>
                 <h3><b>What is a Branch?</b></h3>
-                <p>A branch allows a developer to independently code a new feature or modify software without affecting the main project. The commits made on a separate branch can be merged back into the main branch when everything works and has been approved.</p>
+                <img src="https://guides.github.com/activities/hello-world/branching.png" alt="A diagram showing a feature branch branching out of the master branch and then being merged back into the master branch after some changes have been made." width="1000">
+                <p>A branch allows a developer to independently code a new feature or modify software without affecting the main project. The commits made on a separate branch can be merged back into the main (master) branch when everything works and has been approved.</p>
                 <h3><b>What is a Pull Request?</b></h3>
                 <p>A pull request lets other people see the changes you have made on a branch and asks them to review the changes before the changes are merged into the main branch of the project.</p>
                 <h3>Some Shell Commands for Using Git in the Terminal</h3>
